<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".HomeScreen">


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/NavigationBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_navigation_bar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:id="@+id/Logout"
            android:text="@string/logout"
            android:onClick="ClickLogout"/>

        <TextView
            android:id="@+id/UserDisplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="175dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <EditText
            android:id="@+id/SearchFor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Name_of_Bar" />

        <Button
            android:id="@+id/Search"
            android:layout_width="130dp"
            android:layout_height="63dp"
            android:onClick="onClick"
            android:text="@string/Search" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/ToCocktails"
            android:layout_width="130dp"
            android:layout_height="63dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="355dp"
            android:layout_marginEnd="237dp"
            android:layout_marginBottom="256dp"
            android:text="@string/cocktails"
            android:onClick="onClick"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
        android:id="@+id/ToTaxis"
        android:layout_width="130dp"
        android:layout_height="63dp"
            android:layout_marginStart="193dp"
        android:layout_marginTop="355dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="256dp"
        android:text="@string/call_a_cab"
        android:onClick="onClick"/>
    </LinearLayout>
</RelativeLayout>