<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".CocktailPage">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
    <androidx.cardview.widget.CardView
        android:id="@+id/expandable_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/cardview_dark_background"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/sex_on_the_beach"
                    android:contentDescription="@string/todo" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/SexOnTheBeach"
                        android:textColor="@color/white"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                        <TextView
                            android:id="@+id/ShowText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:hint="@string/read_more"
                            android:onClick="expand"
                            android:textColor="@android:color/holo_blue_light"
                            android:textColorHint="@android:color/holo_blue_light"
                            android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ExpandedView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2.5dp"
                    android:gravity="center"
                    android:text="@string/Double_Vodka"
                    android:textColor="@color/white" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="2.5dp"
                            android:gravity="center"
                            android:text="@string/Double_PeachSchnapps"
                            android:textColor="@color/white" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="2.5dp"
                                    android:gravity="center"
                                    android:text="@string/OJ"
                                    android:textColor="@color/white" />

                                        <TextView
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:layout_margin="2.5dp"
                                            android:gravity="center"
                                            android:text="@string/Cranberry_juice"
                                            android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/expandable_cardview_screwdriver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/cardview_dark_background"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/screwdriver"
                    android:contentDescription="@string/todo" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/Screwdriver"
                        android:textColor="@color/white"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                        <TextView
                            android:id="@+id/ShowTextScrewdriver"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:hint="@string/read_more"
                            android:onClick="ExpandScrewdriver"
                            android:textColor="@android:color/holo_blue_light"
                            android:textColorHint="@android:color/holo_blue_light"
                            android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ExpandedViewScrewdriver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2.5dp"
                    android:gravity="center"
                    android:text="@string/Double_Vodka"
                    android:textColor="@color/white"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2.5dp"
                        android:gravity="center"
                        android:text="@string/Double_OJ"
                        android:textColor="@color/white"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/CreateCocktailCardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/cardview_dark_background"
                app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/CreateCocktail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/create_your_own"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold"
                 />

                <EditText
                    android:id="@+id/EditCocktail"
                    android:layout_width="match_parent"
                    android:layout_height="50dp" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">
                <Button
                    android:id="@+id/SaveCocktail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:onClick="save"
                    android:text="Save name"/>

                        <Button
                            android:id="@+id/SaveCocktailRecipe"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="5dp"
                            android:onClick="save"
                            android:text="Save Recipe"/>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">
                    <Button
                        android:id="@+id/LoadCocktail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5dp"
                        android:onClick="load"
                        android:text="Cocktail name"/>
                        <Button
                            android:id="@+id/LoadCocktailBody"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="5dp"
                            android:onClick="load"
                            android:text="Cocktail Recipe"/>
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/CocktailHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/CustomHeader"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/CocktailBody"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/CustomBody"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle=""
                    />

            </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/HomeCardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/cardview_dark_background"
                app:cardCornerRadius="20dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/ReturnHome"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:text="Home"
                        android:drawableLeft="@drawable/ic_home_24"
                        android:onClick="ReturnHome"
                        android:textSize="24sp"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
</LinearLayout>
    </ScrollView>
</androidx.core.widget.NestedScrollView>