<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".PhoneTaxiPage">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/Dundee_Cardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/cardview_dark_background"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/DundeePic"
                        android:layout_width="wrap_content"
                        android:layout_height="300dp"
                        android:contentDescription="@string/todo"
                        android:scaleType="centerCrop"
                        android:src="@drawable/dct"
                        android:onClick="Call"/>

                    <TextView
                            android:id="@+id/Dundee"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/DundeeTaxis"
                            android:textColor="@color/white"
                            android:textSize="25sp"
                            android:textStyle="bold"
                            android:onClick="Call"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/GlasgowCardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/cardview_dark_background"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/GlasgowPic"
                    android:layout_width="wrap_content"
                    android:layout_height="300dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/gct"
                    android:contentDescription="@string/todo"
                    android:onClick="Call"/>

                <TextView
                    android:id="@+id/Glasgow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/GlasgowTaxis"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:onClick="Call"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/CustomNumCardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/cardview_dark_background"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="339dp"
                    android:orientation="vertical">

                <ImageView
                    android:id="@+id/Callcab"
                    android:layout_width="wrap_content"
                    android:layout_height="300dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/callcab2"
                    android:contentDescription="@string/todo"
                    android:onClick="PhoneCall"/> <!-- might need to change to Call or not have at all -->

                    <EditText
                        android:id="@+id/CustomNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:hint="@string/place_custom_number_here"
                        android:inputType="phone"
                        android:textAlignment="center"
                        android:textColor="#FFFFFF" />

                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/HomeCardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/cardview_dark_background"
                app:cardCornerRadius="20dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="vertical">

                <Button
                    android:id="@+id/ReturnHome"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="Home"
                    android:drawableLeft="@drawable/ic_home_24"
                    android:onClick="ReturnHome"
                    android:textSize="24sp"/>

            </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>
</androidx.core.widget.NestedScrollView>